# migration_ohrana

./: .env.example  .gitignore  CLAUDE.md  DATA.7z  FOXUSER.DBF  FOXUSER.FPT  README.md  REVIEW.md  ROADMAP.md  Thumbs.db  config.fpw  main.py  ohrana.db  ohrana.spec  pyproject.toml  run.py  time_kts.dbf  time_mil.CDX  time_mil.dbf  time_pul.dbf
.github/workflows/: build_linux.yml  build_windows.yml
1/DATA/: OBOSOB.CDX  PRIB.BAK  PRIB_TO.BAK  TIME_MIL.BAK  arhiv.dbf  arhiv_ob.BAK  arhiv_ob.dbf  basa.BAK  basa.CDX  basa.dbf  basa_ob.cdx  basa_ob.dbf  dog.dbf  (+34 more)
DATA/: INSTR.CDX  PRIB_OB.BAK  TIME_MIL_OP.CDX  arhiv.FPT  arhiv.TBK  arhiv.dbf  arhiv_ob.dbf  basa.CDX  basa.dbf  basa11111.CDX  basa11111.dbf  basa_ob.cdx  basa_ob.dbf  dop_ob.DBF  dv_ob.DBF  instr.dbf  instr1.CDX  instr1.dbf  kgo.CDX  kgo1.CDX  kgo1.DBF  nastr.dbf  obosob.dbf  obsled.BAK  obsled.dbf  perep.BAK  prib.CDX  prib.dbf  prib_ob.CDX  prib_ob.DBF  program1.BAK  program1.FXP  sob.BAK  sob.CDX  sob.dbf  sp_of.dbf  tarif.CDX  tarif.dbf  tarif_op.dbf  time_d.CDX  (+19 more)
DATA_/: PRIB_TO.CDX  PRIB_TO.DBF  arhiv.BAK  arhiv.dbf  arhiv_ob.dbf  basa.CDX  basa.dbf  basa_ob.BAK  basa_ob.cdx  basa_ob.dbf  kgo.DBF  kgo1.CDX  nastr.BAK  nastr.dbf  obosob.BAK  obsled.dbf  perep.CDX  perep.dbf  pr_ob.DBF  prib.CDX  prib.dbf  prib_dop.DBF  prib_ob.CDX  prib_ob_.CDX  prib_ob_.dbf  sob.CDX  sob.dbf  sp_prib.CDX  sp_uch.dbf  tarif.BAK  tarif.CDX  tarif.dbf  tarif_op.dbf  time_d.CDX  time_kts.CDX  time_kts.dbf  time_kts_op.dbf  time_mil.CDX  time_mil.dbf  time_pul.CDX  (+6 more)
DOC/: prikaz.doc
docs/: deploy.md  info_for_migration.md
(+45 files in other folders)
